# genesis-robotics-project

./: .gitignore  README.md  test_genesis.py
examples/: grip_and_release.py  robot_control.py
go2_config/launch/: test.launch.py
note/: TODO  champ_teleop_memo  genesis_api_reference.txt
quadruped_controller/src/champ/champ/include/champ/utils/: urdf_loader.h
quadruped_controller/src/champ/champ_base/: CMakeLists.txt
quadruped_controller/src/champ/champ_base/src/: quadruped_controller.cpp
quadruped_controller/src/champ/go2_config/: CMakeLists.txt
quadruped_controller/src/champ/go2_config/launch/: test.launch.py
quadruped_controller/src/champ/go2_description/: CMakeLists.txt
quadruped_controller/src/champ/go2_description/xacro/: robot.xacro
quadruped_controller/src/champ_teleop/: CMakeLists.txt  champ_teleop.py
quadruped_controller_cpp/champ/: CMakeLists.txt
quadruped_controller_cpp/champ/include/champ/quadruped_base/: quadruped_base.h  quadruped_components.h  quadruped_joint.h  quadruped_leg.h
quadruped_controller_cpp/champ/include/champ/utils/: urdf_loader.h
quadruped_controller_cpp/champ_base/: CMakeLists.txt
quadruped_controller_cpp/champ_base/include/: quadruped_controller.h
quadruped_controller_cpp/champ_base/src/: quadruped_controller.cpp  yaml_parser.cpp
quadruped_controller_cpp/src/champ/champ/: CMakeLists.txt
quadruped_controller_cpp/src/champ/champ/include/champ/utils/: urdf_loader.h
quadruped_controller_cpp/src/champ/champ_base/: CMakeLists.txt  package.xml
quadruped_controller_cpp/src/champ/champ_base/include/: quadruped_controller.h  yaml_parser.h
quadruped_controller_cpp/src/champ/champ_base/resource/: gait_config.yaml  joints_map.yaml  robot.urdf  test.py
quadruped_controller_cpp/src/champ/champ_base/src/: quadruped_controller.cpp  quadruped_controller_binding.cpp  robot.urdf  yaml_parser.cpp
resource/: m0609.urdf  m0609_gripper.urdf  m0609_gripper2.urdf
src/: jointGroup.py  main.py  robotEntity.py  sceneManager.py
src/examples/: go2_control.py  grip_and_release.py  robot_control.py
src/go2_backflip/: go2_backflip.py  go2_env.py  simple_backflip.py  test.py
src/go2_quadruped_control/: links_map.yaml  test.py
src/go2_rl/: go2_env.py  go2_eval.py  go2_train.py
src/go2_rl/go2_path_following/: gait_config.yaml  go2_env.py  go2_eval.py  go2_train.py
src/go2_rl/go2_walking/: go2_env.py  go2_train.py
src/go2_rl/logs/go2-walking/: cfgs.pkl  events.out.tfevents.1736385243.sjs.18371.0
src/robot_arm/: grip_and_release.py  jointGroup.py  robotEntity.py  robot_control.py  sceneManager.py
